--- a/style.css
+++ b/style.css
@@ -18,6 +18,16 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
 }
+.wrapper {
+  width: 400px;
+  height: 400px;
+  background: #FC5B3F;
+  margin: 10px auto;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+  transform: rotate(108deg);
+}
 
 .container {
   margin: 30px auto;
